Add instructions to REDAME to get the bot itself

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 Setup:
+git clone https://github.com/ophal/botphal.git
+cd botphal
 git clone https://github.com/JakobOvrun/LuaIRC.git irc
 cd irc
 git checkout -b ad53b2aeb1d347e05711ef6af0c48406fc1078ec ad53b2aeb1d347e05711ef6af0c48406fc1078ec # because newest version is broken
