--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+NOTICE: This projet is abandoned, no further development is planned.
+
 Setup:
 git clone https://github.com/ophal/botphal.git
 cd botphal
